--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Task4</title>
+   <title>Hey</title>
    <link rel="stylesheet" href="css/style.css">
    <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
@@ -18,37 +18,45 @@
             <h5 class="mb-4
             fst-italic">Найди интересные материалы для себя</h5>
             <a class="btn btn-danger btn-lg m-2 fw-light"
-               href="https://www.youtube.com/channel/UCCXF68Da_ndcmvv_9OG75Cw" role="button" rel="nofollow"
-               target="_blank">Найти больше</a>
+               href="https://www.youtube.com/watch?v=jMCv_m_l6fg" role="button" rel="nofollow"
+               target="_blank">Find more</a>
          </div>
       </div>
    </header>
    <main>
       <div class="container pt-5 pb-5 text-center ">
-         <h2 class="fw-bolder">Множество крутых проектов для вас и вашей команды!</h2>
-         <p>Отличные простые и стильные проекты, которые подойдуть как для небольшого сайта, так и для крупной компании!
+         <h2 class="fw-bolder">Lots of cool projects for you</h2>
+         <p>Great simple and stylish projects that are suitable for both a small site and a large company!
          </p>
          <a class="btn btn-dark btn-lg m-1 fw-light" href="https://www.youtube.com/channel/UCCXF68Da_ndcmvv_9OG75Cw"
-            role="button" rel="nofollow" target="_blank">Что мы предлагаем?</a>
+            role="button" rel="nofollow" target="_blank">What do I suggest?</a>
       </div>
       <div class="promo text-white  text-center pt-5 pb-5 ">
-         <h2 class="mt-4 mb-4"><span class="text-muted fw-light">Услуги</span><br>Что мы предлагаем</h2>
+         <h2 class="mt-4 mb-4"><span class="text-muted fw-light">
+Services</span><br>
+What do we offer</h2>
          <div class=" d-flex align-items-center justify-content-center flex-wrap">
             <div class="block m-2">
-               <h4 class="pb-2">Готовый код</h4>
-               <p class="fw-light">Можно встраивать в свои проекты</p>
+               <h4 class="pb-2">
+Ready code</h4>
+               <p class="fw-light">
+Can be embedded in your projects</p>
             </div>
             <div class="block m-2">
-               <h4 class="pb-2">Легко перелать</h4>
-               <p class="fw-light">Легкий и удобный код, который легко переписать</p>
+               <h4 class="pb-2">
+Easy to redo</h4>
+               <p class="fw-light">
+Lightweight and convenient code that is easy to rewrite</p>
             </div>
             <div class="block m-2">
-               <h4 class="pb-2">Помощь</h4>
-               <p class="fw-light">Поддержка и помощ при работе с сервисом</p>
+               <h4 class="pb-2">Help</h4>
+               <p class="fw-light">
+Support</p>
             </div>
             <div class="block m-2">
-               <h4 class="pb-2">Качество</h4>
-               <p class="fw-light">Качественные работы по низким ценам</p>
+               <h4 class="pb-2">
+Quality</h4>
+               <p class="fw-light">Low prices</p>
             </div>
          </div>
       </div>
@@ -57,11 +65,12 @@
    <footer>
       <div class="container d-flex align-items-center justify-content-center text-center h-100">
          <div class="text-white">
-            <h2 class="mb-3 fw-bolder display-4">Ваш новый веб сайт!</h2>
+            <h2 class="mb-3 fw-bolder display-4">
+Your new website!</h2>
 
             <a class="btn btn-danger btn-lg m-2 fw-light"
-               href="https://www.youtube.com/channel/UCCXF68Da_ndcmvv_9OG75Cw" role="button" rel="nofollow"
-               target="_blank">Найти больше</a>
+               href="https://www.youtube.com/watch?v=xY4fWRrwwOU" role="button" rel="nofollow"
+               target="_blank">Find more</a>
          </div>
    </footer>
 
