--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
    <header>
       <div class="container d-flex align-items-center justify-content-center text-center h-100">
          <div class="text-white">
-            <h1 class="mb-3 fw-bolder display-4">Крутое портфолио</h1>
+            <h1 class="mb-3 fw-bolder display-4">Cool portfolio</h1>
             <h5 class="mb-4
-            fst-italic">Найди интересные материалы для себя</h5>
+            fst-italic">You're simply the best</h5>
             <a class="btn btn-danger btn-lg m-2 fw-light"
                href="https://www.youtube.com/watch?v=jMCv_m_l6fg" role="button" rel="nofollow"
                target="_blank">Find more</a>
